# video-simili-duplicate-cleaner

./: .gitignore  BUILD.md  LINUX.md  changelog_l.md
QtProject/: CMakeLists.txt  vsdc-linux.pro
QtProject/app/: mainwindow.cpp  version.txt  video.cpp  video.h
QtProject/libraries/: .gitattributes
QtProject/libraries/linux/ffmpeg/lib/: libavcodec.so.61.19.101  libavdevice.so.61.3.100  libavfilter.so.10.4.100  libavformat.so.61.7.100  libavutil.so.59.39.100  libpostproc.so.58.3.100  libswresample.so.5.3.100  libswscale.so.8.3.100
QtProject/libraries/linux/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
QtProject_Linux/: CMakeLists.txt  CMakeLists.txt.user.a4e1b17  PKGBUILD  arch_build.sh
QtProject_Linux/app/: main.cpp  version.txt  video.h
QtProject_Linux/release-build/: .DirIcon  .ninja_deps  .ninja_log
QtProject_Linux/release-build/.cmake/api/v1/reply/: cache-v2-1cff1154f0541943a89b.json  cmakeFiles-v1-9c0bf1286497a6561fdc.json  codemodel-v2-1ad1a00bff58ac136306.json  index-2025-08-09T23-59-12-0677.json  target-video-simili-duplicate-cleaner-Release-f32626e96ab04e3b45bf.json  target-video-simili-duplicate-cleaner_autogen-Release-99db7e6ca0517bb69ebc.json
QtProject_Linux/release-build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
QtProject_Linux/release-build/.qtc_clangd/: compile_commands.json
QtProject_Linux/release-build/.qtc_clangd/.cache/clangd/index/: QApplication.35C602C2787AED3E.idx  QBuffer.61FB4960CCEF0A32.idx  QCryptographicHash.C194E5A7126C197D.idx  QDateTime.EB9D498EF9C09411.idx  QDeadlineTimer.478C374786D05215.idx  QDesktopServices.FDC1C32A819FFBF6.idx  QDir.9A1F8947DC8C4061.idx  QDragEnterEvent.F80DFD2D898A91CF.idx  QElapsedTimer.E5DDFA6809EA3C29.idx  QFileDialog.4CBEA021BA077A24.idx  QHash.5245AD6AFB81955B.idx  QJsonDocument.7E55E7E83630D199.idx  QLabel.219C8728C5358D98.idx  QList.492B789CF2297E39.idx  QMap.25B2BB2DA4388F62.idx  QMenu.ABCE816272E07C86.idx  QMessageBox.36627A5F7960EE49.idx  QMetaType.28AB9ED0649F7AFE.idx  QMimeData.C0D098FB41D37DFB.idx  QMutex.1275DEADCC28393C.idx  QObject.BDA9AF01C9488FD4.idx  QProcess.7224F45CCB19DDDA.idx  QProgressDialog.B94EFA20B8A05BDD.idx  QQueue.B69F3FECCA6CA131.idx  QRect.9F0A53FF2E151298.idx  QRegularExpression.A3FC0ADD7A08BBCB.idx  QScrollBar.65DF0BCF0736C0A6.idx  QSettings.1D21CFF9F4527EB6.idx  QShortcut.7E8B2007B883CD2B.idx  QSize.9902516E408BE796.idx  QSqlDatabase.B9B89862E936919E.idx  QSqlQuery.CD463FABC0957D0E.idx  QStandardPaths.81A4FF732E2BD226.idx  QString.22BC3B67BCC69C5C.idx  QStringList.19EA0087C01C57EC.idx  QTemporaryDir.FBB18A02024DD9C1.idx  QThread.2DAABEBB831F9174.idx  QTimer.262EDE3F97F44AAA.idx  QUuid.C4799508FDA07E13.idx  QVariant.FC2A2613E6E7B4E7.idx  (+481 more)
QtProject_Linux/release-build/linux/: .ninja_deps  .ninja_log  AppRun  CMakeCache.txt  CMakeCache.txt.prev  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  qtcsettings.cmake  video-simili-duplicate-cleaner  video-simili-duplicate-cleaner.desktop
QtProject_Linux/release-build/linux/.cmake/api/v1/reply/: cache-v2-6fc727a16d4f16e8c211.json  cache-v2-d637f932d51d398bc17a.json  cmakeFiles-v1-6e5bc7fe883894a25d7d.json  cmakeFiles-v1-72ba042985e0e86a8fdc.json  (+7 more)
QtProject_Linux/release-build/linux/.cmake/api/v1/reply.prev/: cache-v2-3d9763ec4d68828fb203.json  cmakeFiles-v1-356342b556913dd8a6c8.json  codemodel-v2-d05f561c0be76c4a4ea6.json  directory-.-Release-30e3b45f56fca0f41f07.json  index-2025-08-10T02-50-56-0475.json  target-video-simili-duplicate-cleaner-Release-24e4611c6d32ec51dc08.json  target-video-simili-duplicate-cleaner_autogen-Release-cce073e0fefed69cd2a7.json
QtProject_Linux/release-build/linux/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
QtProject_Linux/release-build/linux/.qtc_clangd/: compile_commands.json
QtProject_Linux/release-build/linux/_CPack_Packages/Linux/DEB/: video-simili-duplicate-cleaner-1.13.0L-Linux.deb
QtProject_Linux/release-build/linux/_CPack_Packages/Linux/RPM/: rpmbuildvideo-simili-duplicate-cleaner.err  rpmbuildvideo-simili-duplicate-cleaner.out
QtProject_Linux/release-build/linux/lib/: libOpenCL.so.1  libavutil.so.56  libgthread-2.0.so.0  liblber-2.5.so.0  libldap-2.5.so.0  libmfx.so.1  libodbc.so.2  libopencv_core.so.4.5d  libpq.so.5  libsasl2.so.2  libssl.so.3  libswscale.so.5  libtbb.so.2  libva-drm.so.2  libva-x11.so.2  libva.so.2  libvdpau.so.1
QtProject_Linux/release-build/linux/video-simili-duplicate-cleaner_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
QtProject_Linux/release-build/linux/video-simili-duplicate-cleaner_autogen/VJIZ3MDCXP/: moc_comparison.cpp  moc_comparison.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_prefs.cpp  moc_prefs.cpp.d  moc_video.cpp  moc_video.cpp.d  moc_videoprocessingpool.cpp  moc_videoprocessingpool.cpp.d  qrc_files.cpp
QtProject_Linux/release-build/linux/video-simili-duplicate-cleaner_autogen/include/: ui_comparison.h  ui_mainwindow.h
QtProject_Linux/release_files/: video-simili-duplicate-cleaner-1.13.0L-alpha-Linux.deb  video-simili-duplicate-cleaner-1.13.0L-alpha-Linux.rpm  video-simili-duplicate-cleaner-1.13.0L-alpha-Linux.tar.xz  video-simili-duplicate-cleaner-debug-r542.g010500b-1-x86_64.pkg.tar.zst  video-simili-duplicate-cleaner-r544.g4a0077c-1-x86_64.pkg.tar.zst  video-simili-duplicate-cleaner-v1.13.0L-alpha-x86_64.pkg.tar.zst  vsdc-1.13.0L-alpha-Linux.deb
QtProject_Linux/release_files/packages-aarch64/: vsdc-1.13.0L-alpha-aarch64.deb  vsdc-1.13.0L-alpha-aarch64.rpm
QtProject_Linux/release_files/packages-arch-aarch64/: video-simili-duplicate-cleaner-r618.g30ee9a1-1-aarch64.pkg.tar.xz
QtProject_Linux/release_files/packages-arch-x86_64/: video-simili-duplicate-cleaner-debug-r618.g30ee9a1-1-x86_64.pkg.tar.zst  video-simili-duplicate-cleaner-r618.g30ee9a1-1-x86_64.pkg.tar.zst
QtProject_Linux/release_files/packages-x86_64/: vsdc-1.13.0L-alpha-x86_64.deb  vsdc-1.13.0L-alpha-x86_64.rpm
QtProject_Linux/usr/share/applications/: video-simili-duplicate-cleaner.desktop
(+800 files in other folders)
